Fixed infoFlash
Fixed infoFlash not showing up after the blured background
implementation.

--- a/src/www/public/css/main.css
+++ b/src/www/public/css/main.css
@@ -1,5 +1,6 @@
 .ReactModal__Overlay {
   opacity: 0;
+  z-index: 999999999999;
 }
 
 .ReactModal__Overlay--after-open {
